--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Будеш моїм валентином?</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;600&display=swap" rel="stylesheet">
   <style>
     *, *::before, *::after { box-sizing: border-box; }
     html, body {
@@ -19,18 +22,47 @@
       align-items: center;
       justify-content: center;
       padding: 1rem;
+      position: relative;
+    }
+    .bg-hearts {
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      overflow: hidden;
+    }
+    .bg-hearts span {
+      position: absolute;
+      font-size: 1.5rem;
+      opacity: 0.2;
+      animation: float 6s ease-in-out infinite;
+    }
+    .bg-hearts span:nth-child(1) { left: 8%; top: 15%; animation-delay: 0s; }
+    .bg-hearts span:nth-child(2) { left: 85%; top: 25%; animation-delay: 1s; }
+    .bg-hearts span:nth-child(3) { left: 15%; top: 70%; animation-delay: 2s; }
+    .bg-hearts span:nth-child(4) { left: 75%; top: 60%; animation-delay: 0.5s; }
+    .bg-hearts span:nth-child(5) { left: 50%; top: 10%; animation-delay: 1.5s; }
+    .bg-hearts span:nth-child(6) { left: 25%; top: 50%; animation-delay: 2.5s; }
+    .bg-hearts span:nth-child(7) { left: 90%; top: 80%; animation-delay: 0.8s; }
+    @keyframes float {
+      0%, 100% { transform: translateY(0) rotate(0deg); opacity: 0.2; }
+      50% { transform: translateY(-12px) rotate(10deg); opacity: 0.35; }
     }
     .card {
       position: relative;
       width: min(420px, 100%);
       min-height: 280px;
       padding: 2rem;
-      background: rgba(255, 255, 255, 0.45);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+      background: rgba(255, 255, 255, 0.5);
+      backdrop-filter: blur(14px);
+      -webkit-backdrop-filter: blur(14px);
       border-radius: 24px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.12), 0 2px 8px rgba(0, 0, 0, 0.08);
-      border: 1px solid rgba(255, 255, 255, 0.6);
+      border: 1px solid rgba(255, 255, 255, 0.7);
+      animation: cardAppear 0.5s ease-out;
+    }
+    @keyframes cardAppear {
+      from { opacity: 0; transform: scale(0.96) translateY(10px); }
+      to { opacity: 1; transform: scale(1) translateY(0); }
     }
     .screen {
       display: none;
@@ -42,11 +74,48 @@
     .screen.active {
       display: flex;
     }
+    #ask-screen {
+      position: relative;
+    }
+    .ask-badge {
+      font-size: 0.8rem;
+      letter-spacing: 0.15em;
+      text-transform: uppercase;
+      color: #c44569;
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+      opacity: 0.9;
+    }
+    .ask-title-wrap {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
+      margin-bottom: 1.5rem;
+      flex-wrap: wrap;
+    }
+    .ask-title-wrap .heart {
+      font-size: 1.25rem;
+      animation: heartPulse 1.5s ease-in-out infinite;
+    }
+    .ask-title-wrap .heart:last-child { animation-delay: 0.4s; }
+    @keyframes heartPulse {
+      0%, 100% { transform: scale(1); opacity: 0.9; }
+      50% { transform: scale(1.2); opacity: 1; }
+    }
     .ask-title {
-      font-size: clamp(1.25rem, 4vw, 1.6rem);
+      font-family: 'Caveat', cursive;
+      font-size: clamp(1.6rem, 5vw, 2.1rem);
+      font-weight: 600;
       color: #5c2d4a;
-      margin: 0 0 1.5rem;
-      line-height: 1.4;
+      margin: 0;
+      line-height: 1.35;
+    }
+    .ask-sub {
+      font-size: 0.9rem;
+      color: #8b5a6b;
+      margin-top: -0.5rem;
+      margin-bottom: 1.25rem;
     }
     .buttons-wrap {
       position: relative;
@@ -137,9 +206,18 @@
   </style>
 </head>
 <body>
+  <div class="bg-hearts" aria-hidden="true">
+    <span>♥</span><span>♥</span><span>♥</span><span>♥</span><span>♥</span><span>♥</span><span>♥</span>
+  </div>
   <div class="card">
     <div id="ask-screen" class="screen active">
-      <h1 class="ask-title" id="ask-title"></h1>
+      <p class="ask-badge">14 лютого</p>
+      <div class="ask-title-wrap">
+        <span class="heart" aria-hidden="true">💕</span>
+        <h1 class="ask-title" id="ask-title"></h1>
+        <span class="heart" aria-hidden="true">💕</span>
+      </div>
+      <p class="ask-sub">Обери одну кнопку — обережно з другою 😏</p>
       <div class="buttons-wrap" id="buttons-wrap">
         <button type="button" class="btn btn-yes" id="btn-yes" aria-label="Сказати так">ТАК</button>
         <button type="button" class="btn btn-no" id="btn-no" aria-label="Сказати ні">НІ</button>
@@ -163,13 +241,7 @@
       'wvYNSqBAMDVx8CEYkt',  // propose I love you
       '9rgVLYnPzzUpLsaaxN',  // kiss valentine
       '1xOOQSMJ9X4UykElSk',  // puppy with rose
-      'sNaBNHusmmndIdzAFw',  // I love you hearts
-      'H8mWgckLHm38b2JNvQ',  // I love you hearts
-      '26xBGaIaD7bBYc0sU',   // love animation cute
-      'bDUoCKFTij2CWC6SO0',   // love heart hearts
-      '8QbwUh40Hl96yMgvOx',  // red panda flowers
       '4N1wOi78ZGzSB6H7vK',  // teddy hearts
-      'NTLULEn4dLfh4JByEJ',   // will you be my valentine
       'HJibfnd7xqk5hAMD4v',  // cat blowing kisses
       'KxWDsHfQH6S8AnkZGo',  // cat heart
     ];
